--- a/src/pages/Home/Featured/Featured.css
+++ b/src/pages/Home/Featured/Featured.css
@@ -1,4 +1,24 @@
-.featured-item{
+.featured-item-b {
+    position: relative;
     background-image: url('../../../assets/home/featured.jpg');
     background-size: cover;
+    background-position: center;
+    background-attachment: fixed; /* Fix background for parallax effect */
+    /* Adjust the height as needed */
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5); /* Ensure text is white */
 }
+
+.featured-item-b::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
+    z-index: 1;
+}
+
+
+
